--- a/package.json
+++ b/package.json
@@ -12,19 +12,20 @@
     "format": "prettier --write ."
   },
   "devDependencies": {
-    "@sveltejs/adapter-vercel": "^5.1.1",
-    "@sveltejs/kit": "^2.0.0",
-    "@sveltejs/vite-plugin-svelte": "^3.0.0",
-    "prettier": "^3.1.1",
-    "prettier-plugin-svelte": "^3.1.2",
-    "svelte": "^4.2.7",
-    "svelte-check": "^3.6.0",
-    "tslib": "^2.4.1",
-    "typescript": "^5.0.0",
-    "vite": "^5.0.3"
+    "@sveltejs/adapter-vercel": "^5.3.0",
+    "@sveltejs/kit": "^2.5.7",
+    "@sveltejs/vite-plugin-svelte": "^3.1.0",
+    "prettier": "^3.2.5",
+    "prettier-plugin-svelte": "^3.2.3",
+    "svelte": "^4.2.15",
+    "svelte-check": "^3.6.9",
+    "tslib": "^2.6.2",
+    "typescript": "^5.4.5",
+    "vite": "^5.2.10"
   },
   "type": "module",
   "dependencies": {
-    "firebase": "^10.9.0"
+    "firebase": "^10.11.0",
+    "svelte-persisted-store": "^0.9.2"
   }
 }
